# dorc-clients

./: LICENSE  README.md
.github/workflows/: ci.yml  publish-pages.yml  publish-pypi.yml
docs/: CONTRACT.md  PUBLISHING_PYPI.md  README.md  SDK.md  _config.yml  _toc.yml
mcp/: README.md  server.py
notebooks/: 00_quickstart.ipynb  01_create_and_validate_cce.ipynb  02_review_and_rectify_loop.ipynb  03_export_jsonl_for_rag.ipynb  README.md
sdk/python/: README.md  pyproject.toml
sdk/python/dorc_client/: __init__.py  auth.py  client.py  config.py  types.py
sdk/python/examples/: health_check.py  validate_cce.py
sdk/python/examples (1)/: validate_cce.py
sdk/python/scripts/: generate_jwt.py
sdk/python/src (1)/dorc_client/: __init__.py  auth.py  client.py  config.py  errors.py  jwt.py  models.py  version.py
sdk/python/src/dorc_client/: __init__.py  auth.py  client.py  config.py  errors.py  models.py  version.py
sdk/python/tests/: test_client_smoke.py  test_contract_client.py  test_integration.py  test_mcp_jwt (1).py  test_mcp_jwt.py
