[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dorc-client"
version = "0.1.0"
description = "Python SDK for dorc-engine HTTP API"
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["dorc_client"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

